______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.198:

* Tests:
  - Added BasicPropertyReader tests.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.197:

* XINS/Java Client Framework:
  - Improved the fail-over decision process slightly. The XINS error codes
    "_InvalidRequest" and "_DisabledFunction" indicate that the request was
    not handled, so if one of those error codes is returned, the call may
    fail-over.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.196:

* XINS/Java Common Library:
  - Moved TimeOutException (introduced in XINS 0.195) from package
    org.xins.common.service to package org.xins.common.
  - Added generic TimeOutController class in package org.xins.common.
  - Now only performing fail-over if the new method shouldFailOver() returns
    true. By default the method returns false, but it may be overridden by
    subclasses.
  - Added log message 3315-3318, which describe the decision making process
    for fail-over, depending on available targets and whether or not fail-over
    is in principle allowed, considering the problem at hand.
  - Added log message 3319: Target descriptor constructed.
  - Added append(boolean) method to class FastStringBuffer.
  - No longer logging reason with log message 3313 in class ServiceCaller. The
    reason should be logged in the subclass. It is virtually impossible to log
    the correct reason in log message 3313 in the correct translation.

* XINS/Java Client Framework:
  - Added new CallException subclasses: ConnectionException,
    ConnectionRefusedException, ConnectionTimeOutException and
    SocketTimeOutException.
  - Added log messages 2012-2015 which describe different causes for a failure
    to call a target XINS API: connection refusal, connection time-out, socket
    time-out and total time-out.