@@ -1,8 +1,6 @@
 # Version number for XINS.
 
 #Fri Jul 16 10:10:20 CEST 2004
-version.prev.major=0
 version.minor=198
-version.prev.minor=197
 version.suffix=-dev
 version.major=0
